<resources>
    <string name="app_name">App</string>
    <string name="dob">dob</string>
    <string name="sex">sex</string>
    <string name="country">country</string>
    <string name="date">date</string>
    <string name="get_rank">Rank</string>

    <string name="enter_message">Enter message</string>
    <string name="android_room_example">Android Room Example</string>
    <string name="query1">Get a demographic data of the country</string>
    <string name="query2">Retrieves the mortality distribution tables for the given country, sex and age.</string>
    <string name="result">Result</string>

    <string name="population_today_and_tomorrow">Population today and tomorrow</string>
    <string name="life_expectancy">Life expectancy</string>
    <string name="rank_today">Rank today</string>
    <string name="read_file">Read file</string>
    <string name="write_file">Write file</string>
    <string name="population">Population</string>

    <string-array name="country">
        <item>Afghanistan</item>
        <item>AFRICA</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Arab Rep of Egypt</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>ASIA</item>
        <item>Australia</item>
        <item>New Zealand</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>The Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei Darussalam</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cote-d-Ivoire</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Caribbean</item>
        <item>Central African Republic</item>
        <item>Central America</item>
        <item>Central Asia</item>
        <item>Chad</item>
        <item>Channel Islands</item>
        <item>Chile</item>
        <item>China</item>
        <item>Hong Kong SAR-China</item>
        <item>Macao SAR China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curacao</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Dem Peoples Rep of Korea</item>
        <item>Dem Rep of Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominican Republic</item>
        <item>Eastern Africa</item>
        <item>Eastern Asia</item>
        <item>Eastern Europe</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>EUROPE</item>
        <item>Federated States of Micronesia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>FYR Macedonia</item>
        <item>Gabon</item>
        <item>The Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Islamic Republic of Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyz Republic</item>
        <item>Lao PDR</item>
        <item>LATIN AMERICA AND THE CARIBBEAN</item>
        <item>Latvia</item>
        <item>Least developed countries</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Less developed regions</item>
        <item>Less developed regions, excluding China</item>
        <item>Less developed regions, excluding least developed countries</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Melanesia</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Middle Africa</item>
        <item>Moldova</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>More developed regions</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>The Netherlands</item>
        <item>New Caledonia</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Northern Africa</item>
        <item>NORTHERN AMERICA</item>
        <item>Northern Europe</item>
        <item>Norway</item>
        <item>OCEANIA</item>
        <item>Oman</item>
        <item>Other non-specified areas</item>
        <item>Pakistan</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Polynesia</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>RB-de-Venezuela</item>
        <item>Rep of Korea</item>
        <item>Rep of Yemen</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>St-Lucia</item>
        <item>St-Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovak Republic</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South America</item>
        <item>South Sudan</item>
        <item>South-Central Asia</item>
        <item>South-Eastern Asia</item>
        <item>Southern Africa</item>
        <item>Southern Asia</item>
        <item>Southern Europe</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>West Bank and Gaza</item>
        <item>Sub-Saharan Africa</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syrian Arab Rep</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>US Virgin Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vietnam</item>
        <item>Western Africa</item>
        <item>Western Asia</item>
        <item>Western Europe</item>
        <item>Western Sahara</item>
        <item>World</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
</resources>
